# HotKey

./: .gitignore  CMakeLists.txt
HotKey/: CMakeLists.txt  HotKey.cpp  HotKey.h
HotKey/Core/: EventHandler.cpp  EventHandler.h  Listener.cpp  Listener.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h  ShortcutManager.cpp  ShortcutManager.h
HotKey/Domain/: Button.cpp  Button.h  Shortcut.cpp  Shortcut.h
